--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -110,7 +110,7 @@
       <b>{{refillData.params.ok_item_1_price}} {{refillData.params.ok_currency}}</b>
     </div>
     <div class="subtitle refill__fiat-successful-subtitle">
-      You can track the progress in history section on <a href="#" routerLink="/funds/balances">funds</a> page
+      You can track the progress in history section on <a routerLink="/funds/balances">funds</a> page
     </div>
 
     <form name="hideForm" method="post" [action]="refillData.redirectionUrl"
