start change color dropdown & modals

--- a/src/app/shared/components/custom-search-input/custom-search-input.component.scss
+++ b/src/app/shared/components/custom-search-input/custom-search-input.component.scss
@@ -14,7 +14,7 @@ ul.select__list {
   z-index: 61;
   .select__list-item{
     &:hover{
-      background-color: #191f42;
+      background-color: #fff;
     }
   }
 }
