--- a/src/app/funds/transaction-history/transaction-history.component.scss
+++ b/src/app/funds/transaction-history/transaction-history.component.scss
@@ -39,6 +39,8 @@
       font-family: inherit;
     }
   }
+
+
   .ng-arrow {
     border-color: #94C2FF transparent transparent !important;
   }
@@ -46,13 +48,17 @@
     border-color: transparent transparent #94C2FF !important;
   }
   .ng-dropdown-panel{
-    border-color: #94C2FF;
-    background-color: #191A39;
+    border-color: #fff;
+    background-color: #fff;
     margin-bottom: 0 !important;
   }
   .ng-option{
     background-color: transparent !important;
-    color: #fff !important;
+    color: #191A39;
+    font-weight: 400;
+    &:hover{
+          color: #94C2FF;
+    }
     &-marked{
       background-color: rgba(255,255,255,.1) !important;
     }
@@ -246,13 +252,14 @@
     border-color: transparent transparent #94C2FF !important;
   }
   .ng-dropdown-panel{
-    border-color: #94C2FF;
-    background-color: #191A39;
+    border-color: #fff;
+    background-color: #fff;
     margin-bottom: 0 !important;
+    border-radius: 4px;
   }
   .ng-option{
     background-color: transparent !important;
-    color: #fff !important;
+    // color: #fff !important;
     &-marked{
       background-color: rgba(255,255,255,.1) !important;
     }
