--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -262,9 +262,14 @@
     top: 16px;
     left: 16px;
     z-index: 4;
-    background-color: #2E304D;
+    background-color: #fff;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
+    .menu__link-text{
+      font-size: 16px;
+      font-weight: 400;
+      color: #191A39;
+    }
 
     &--notification {
       width: 266px;
