--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -123,23 +123,13 @@
         </div>
       </div>
       <form action="#">
-        <div class="wrap-input wrap-input--with-icon filters-popup__search">
-          <!-- <input class="wrap-input__input" name="currency"type="text" required>
-          <label class="wrap-input__label" for="">Search</label>
-          <div class="wrap-input__icon">
-            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />
-            </svg>
-          </div> -->
-          <ng-select
-            class="custom"
-            [items]="currencyForChoose$ | async"
-            bindLabel="name"
-            placeholder="Currency"
-            bindValue="id"
-            name="currencyPair"
-            [(ngModel)]="currencyId"
-          ></ng-select>
+        <div>
+          <app-dynamic-input
+            [value]="currValue"
+            [options]="(currencyForChoose$ | async) | dynamicIData: 'name': 'id'"
+            (onChange)="onChangeCurrPair($event)"
+            (onSelect)="onSelectPair($event.id)"
+          ></app-dynamic-input>
           <div class="wrap-input__line"></div>
         </div>
         <div class="row row--jcsb">
@@ -197,24 +187,13 @@
     </div>
     <form action="">
       <div class="row transaction__filters">
-        <div class="wrap-input wrap-input--with-icon transaction__search">
-          <!-- <input class="wrap-input__input" name="currency" type="text" required>
-          <label class="wrap-input__label" for="">Currency</label>
-          <div class="wrap-input__icon">
-            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />
-            </svg>
-          </div>
-          <div class="wrap-input__line"></div> -->
-          <ng-select
-            class="custom"
-            [items]="currencyForChoose$ | async"
-            bindLabel="name"
-            placeholder="Currency"
-            bindValue="id"
-            name="currencyPair"
-            [(ngModel)]="currencyId"
-          ></ng-select>
+        <div>
+          <app-dynamic-input
+            [value]="currValue"
+            [options]="(currencyForChoose$ | async) | dynamicIData: 'name': 'id'"
+            (onChange)="onChangeCurrPair($event)"
+            (onSelect)="onSelectPair($event.id)"
+          ></app-dynamic-input>
         </div>
         <div class="wrap-input transaction__datepicker">
             <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}">{{'From' | translate}}</label>
