--- a/src/app/shared/components/dynamic-input/dynamic-input.component.scss
+++ b/src/app/shared/components/dynamic-input/dynamic-input.component.scss
@@ -12,9 +12,10 @@ perfect-scrollbar{
 
 ul.select__list {
   z-index: 600;
-  width: 100;
+  width: 100%;
   // height: 260px;
   .select__list-item{
+    min-height: 38px;
     &:hover, &.active{
       background-color: #191f42;
     }
