--- a/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.scss
+++ b/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.scss
@@ -95,6 +95,6 @@
     }
   }
 }
-::ng-deep .ps__rail-y {
-  margin-right: 2px !important;
-}
+// ::ng-deep .ps__rail-y {
+//   margin-right: 2px !important;
+// }
