change color modal

--- a/src/app/shared/components/dynamic-input/dynamic-input.component.scss
+++ b/src/app/shared/components/dynamic-input/dynamic-input.component.scss
@@ -17,7 +17,7 @@ ul.select__list {
   .select__list-item{
     min-height: 38px;
     &:hover, &.active{
-      background-color: #191f42;
+      background-color: #fff;
     }
     .dynamic-input__input{
       border-bottom-right-radius: 0px;
