--- a/src/app/popups/already-registered-popup/already-registered-popup.component.scss
+++ b/src/app/popups/already-registered-popup/already-registered-popup.component.scss
@@ -1,13 +1,14 @@
 .popup-demo{
   padding: 28px 16px;
   min-height: auto;
-  background-color: #191A39;
-  border: 1px solid #94C2FF;
+  background-color: #fff;
+  border: 1px solid #fff;
   .popup__close{
-    width: 6px;
-    height: 6px;
+    width: 12px;
+    height: 12px;
     right: 16px;
     top: 16px;
+    background-image: url("assets/img/close-light-blue.svg");
   }
   .text{
     font-size: 14px;
@@ -15,6 +16,7 @@
     text-align: center;
     max-width: 580px;
     margin: 16px auto 0;
+    color: #4B4B4B;
   }
   .btn{
     margin-top: 24px;
