--- a/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.html
+++ b/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.html
@@ -9,6 +9,7 @@
       (input)="onChange.emit($event.target.value)"
       (focus)="openDropdown()"
       type="text"
+      autocomplete="off"
       required
     >
     <div class="dynamic-input__triangle"></div>
