--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -509,7 +509,7 @@
     &__submenu{
       position: absolute;
       top: 100%;
-      right: 0;
+      left: 0;
       height: 0;
       overflow: hidden;
       background-color: #fff;
