--- a/src/app/auth/final-step-recovery-password/final-step-recovery-password.component.html
+++ b/src/app/auth/final-step-recovery-password/final-step-recovery-password.component.html
@@ -1,18 +1,16 @@
 
 <div class="overlay">
   <div class="popup popup-login">
-    <h6 class="popup__title">{{'Email confirmed' | translate}}</h6>
+    <h6 class="popup__title">{{'Password recovery' | translate}}</h6>
     <h4 class="popup__subtitle">{{message}}</h4>
     <form class="popup__form" [formGroup]="passwordForm">
 
       <div class="wrap-input popup__wrap-input">
         <input
-          (input)="onPasswordInput($event)"
           class="wrap-input__input"
-          [(ngModel)]="password"
           [type]="getInputType()"
           formControlName="password"
-          [ngClass]="{'input--error': !passwordForm.controls['password'].valid && passwordForm.controls['password'].touched}"
+          [ngClass]="{'input--error': !getFirstPassword.valid && getFirstPassword.touched}"
         >
         <label class="wrap-input__label" for="">{{'Password' | translate}}</label>
         <div class="wrap-input__line"></div>
@@ -23,35 +21,46 @@
         >
           </span>
         <!--Input error section starts-->
-        <!--<div *ngIf="passwordForm.controls['password'].touched && passwordForm.controls['password'].errors != null">-->
-            <!--<span-->
-              <!--*ngIf="passwordForm.get('password').errors['required']"-->
-              <!--class="wrap-input__message">-->
-              <!--Password is required.-->
-            <!--</span>-->
+        <ng-container *ngIf="getFirstPassword.touched && getFirstPassword.errors != null">
           <span
-            [ngClass]="{'msg-error': (msgRed && !passwordForm.controls['password'].valid && passwordForm.controls['password'].touched)}" *ngIf="!passwordForm.valid"
-            class="wrap-input__message" translate>
-              Password cannot be less than 8 and more than 40 characters long and should contain of letters (a-z), numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+' characters
-            </span>
-          <!--<span-->
-            <!--*ngIf=" passwordForm.controls['password'].errors['maxlength']"-->
-            <!--class="wrap-input__message">-->
-              <!--Password cannot be more than 20 characters long-->
-            <!--</span>-->
-        <!--</div>-->
+            class="wrap-input__message wrap-input__message--error"
+            *ngIf="getFirstPassword.errors['required']"
+          >
+            {{'Password field is required.' | translate}}
+          </span>
+          <span
+            class="wrap-input__message wrap-input__message--error"
+            *ngIf="getFirstPassword.errors['minlength']"
+          >
+            {{'Password must contain at least 8 characters.' | translate}}
+          </span>
+          <span
+            class="wrap-input__message wrap-input__message--error"
+            *ngIf="getFirstPassword.errors['maxlength']"
+          >
+            {{'Password cannot be more than 40 characters long.' | translate}}
+          </span>
+          <span
+            class="wrap-input__message wrap-input__message--error"
+            *ngIf="getFirstPassword.errors['passwordValidation'] &&
+                   !(getFirstPassword.errors['minlength'] ||
+                     getFirstPassword.errors['required'] ||
+                     getFirstPassword.errors['maxlength'])"
+          >
+            {{('Password cannot be less than 8 and more than 40 characters long and should contain of letters (a-z),' +
+               ' numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+\' characters.') | translate}}
+          </span>
+        </ng-container>
         <!--Input error section ends-->
       </div>
 
 
       <div class="wrap-input popup__wrap-input">
         <input
-          (input)="onRepeatPasswordInput($event)"
           class="wrap-input__input"
-          [(ngModel)]="confirmPass"
           [type]="getInputType()"
           formControlName="confirmPassword"
-          [ngClass]="{'input--error': !passwordForm.controls['confirmPassword'].valid && passwordForm.controls['confirmPassword'].touched}"
+          [ngClass]="{'input--error': !getConfirmPassword.valid && getConfirmPassword.touched}"
         >
         <label class="wrap-input__label" for="">{{'Repeat password' | translate}}</label>
         <div class="wrap-input__line"></div>
@@ -62,23 +71,50 @@
         >
           </span>
         <!--Input error section starts-->
-        <div *ngIf="passwordForm.controls['confirmPassword'].touched && passwordForm.controls['confirmPassword'].errors != null">
-            <span
-              *ngIf="passwordForm.controls['confirmPassword'].errors['required']"
-              class="wrap-input__message" translate>
-              This field is required.
-            </span>
-          <span *ngIf="passwordForm.controls['password'].value !== passwordForm.controls['confirmPassword'].value
-           || passwordForm.controls['confirmPassword'].errors['passwordConfirm']"
-            class="wrap-input__message" translate>
-              Passwords you provided do not match.
-            </span>
-        </div>
+
+        <ng-container *ngIf="getConfirmPassword.touched && getConfirmPassword.errors != null">
+          <span
+            class="wrap-input__message wrap-input__message--error"
+            *ngIf="getConfirmPassword.errors['required']"
+          >
+            {{'Password field is required.' | translate}}
+          </span>
+          <span
+            class="wrap-input__message wrap-input__message--error"
+            *ngIf="getConfirmPassword.errors['minlength']"
+          >
+            {{'Password must contain at least 8 characters.' | translate}}
+          </span>
+          <span
+            class="wrap-input__message wrap-input__message--error"
+            *ngIf="getConfirmPassword.errors['maxlength']"
+          >
+            {{'Password cannot be more than 40 characters long.' | translate}}
+          </span>
+          <span
+            class="wrap-input__message wrap-input__message--error"
+            *ngIf="getConfirmPassword.errors['passwordValidation'] &&
+                   !(getConfirmPassword.errors['minlength'] ||
+                     getConfirmPassword.errors['required'] ||
+                     getConfirmPassword.errors['maxlength'])"
+          >
+            {{('Password cannot be less than 8 and more than 40 characters long and should contain of letters (a-z),' +
+                ' numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+\' characters.') | translate}}
+          </span>
+          <span
+            class="wrap-input__message wrap-input__message--error"
+            *ngIf="getConfirmPassword.errors['passwordsNotMatch']"
+          >
+            {{'Passwords you provided do not match' | translate}}
+          </span>
+        </ng-container>
         <!--Input error section ends-->
       </div>
       <button class="btn popup__btn" (click)="createUser()"
-              [ngClass]="{'bg-none': !passwordForm.valid,
-               'popup__btn--active': passwordForm.valid && passwordForm.controls['password'].value === passwordForm.controls['confirmPassword'].value}">
+              [ngClass]="{
+                'bg-none': !passwordForm.valid,
+                'popup__btn--active': passwordForm.valid
+              }">
         {{'Update password'  | translate}}
       </button>
     </form>
