--- a/src/app/popups/already-restored-password-popup/already-restored-password-popup.component.html
+++ b/src/app/popups/already-restored-password-popup/already-restored-password-popup.component.html
@@ -1,8 +1,8 @@
 <div class="overlay">
-  <div class="popup popup-registration">
-    <div class="popup__close" (click)="closeRecoveryPassPopup()"></div>
-    <h6 class="popup__title">{{'Thank you!' | translate}}</h6>
-    <h4 class="popup__subtitle" [innerHTML]="'Now you can login <br> with your new password' | translate"></h4>
-    <button class="btn popup__btn" (click)="goToLogin()">{{'Login' | translate}}</button>
+  <div class="popup popup-demo">
+    <div class="popup__close" (click)="closeMe()"></div>
+    <div class="text" [innerHTML]="showHtml">
+    </div>
+    <button class="btn btn--active btn--center" (click)="buttonClick()">{{buttonText}}</button>
   </div>
 </div>
