--- a/src/assets/scss/components/_select.scss
+++ b/src/assets/scss/components/_select.scss
@@ -206,7 +206,7 @@
     text-align: left;
     font-weight: 400;
     cursor: pointer;
-    &:hover{
+     &:hover, &.active  {
       color:#94C2FF;
     }
   }
