--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -214,6 +214,16 @@
   }
 }
 @media (min-width:1200px) {
-  .dark-theme{}
+  .dark-theme{
+     .popup-demo{
+      .popup__close{
+        width: 12px;
+        height: 12px;
+        right: 16px;
+        top: 16px;
+        background-image: url("/assets/img/close-light-blue.svg");
+      }
+    }
+  }
 }
 /*--- DARK THEME END---*/
