--- a/src/assets/scss/components/_dropdown.scss
+++ b/src/assets/scss/components/_dropdown.scss
@@ -54,7 +54,7 @@
     color: $darker-blue;
     font-size: 14px;
 
-    &:hover {
+     &:hover, &.active  {
       cursor: pointer;
       background-color: $light-aqua;
       color: #94C2FF;
@@ -73,7 +73,7 @@
 
           color: #191A39;
     font-weight: 400;
-      &:hover {
+       &:hover, &.active {
         cursor: pointer;
         color: #94C2FF;
         background-color: rgba(255,255,255,.1);
